# CoolRender

./: README.md
klin/: FPS.txt
klin/app/: CMakeLists.txt  build.gradle
klin/app/src/androidTest/java/com/klin/klin/: ExampleInstrumentedTest.java
klin/app/src/main/: AndroidManifest.xml
klin/app/src/main/cpp/: native-lib.cpp
klin/app/src/main/java/com/klin/klin/: MainActivity.java
klin/app/src/main/java/com/klin/klin/GLBase/: BaseRenderer.java  BitmapToTextureId.java  Fps.java  GLView.java
klin/app/src/main/java/com/klin/klin/JNIAPI/: JNIAPI.java
klin/app/src/main/res/layout/: activity_main.xml
klin/app/src/main/res/values/: strings.xml
klin/app/src/test/java/com/klin/klin/: ExampleUnitTest.java
klin/gradle/wrapper/: gradle-wrapper.properties
klinSource/: Common.h  Context.cpp  Context.h  GPUObject.cpp  GPUObject.h
klinSource/Core/: Object.cpp  Object.h
klinSource/Engine/: Application.cpp  Application.h  ApplicationSystem.cpp  ApplicationSystem.h  Engine.cpp  Engine.h
klinSource/Graphics/: Batch.cpp  Batch.h  Camera.cpp  Camera.h  DataStruct.cpp  DataStruct.h  Drawable.cpp  Drawable.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsImpl.cpp  GraphicsImpl.h  IndexBuffer.cpp  IndexBuffer.h  RenderSurface.cpp  RenderSurface.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderVariation.cpp  ShaderVariation.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h  View.cpp  View.h  Viewport.cpp  Viewport.h
klinSource/Resource/: Image.cpp  Image.h  Resource.cpp  Resource.h
klinSource/Sample/: BackGroundNode.cpp  BackGroundNode.h  EngineSample.cpp  EngineSample.h  FboHelper.cpp  FboHelper.h  FboNode.cpp  FboNode.h  ShadowMapingDepth.cpp  ShadowMapingDepth.h  TestSample1.cpp  TestSample1.h  shader_m.h
klinSource/Scene/: Animatable.cpp  Animatable.h  Component.cpp  Component.h  Node.cpp  Node.h  NodeTypeData.cpp  NodeTypeData.h  Scene.cpp  Scene.h
